--- a/Flexbox Exercise/css/style.css
+++ b/Flexbox Exercise/css/style.css
@@ -23,3 +23,32 @@ h1{
     
     padding-left: 20px;
 } 
+
+nav{
+    font-family: Helvetica, sans-serif;
+    text-transform: uppercase;
+}
+
+nav ul{
+    list-style: none;
+    display: flex; /*alles binnen ul wordt geflexed*/
+    flex-direction: column;
+    align-content: space-between;
+    height: 150px;
+}
+
+nav a{
+    color: white;
+    text-decoration: none;
+}
+
+nav a:hover{
+    text-decoration: underline;
+}
+
+nav li {
+    flex-grow: 1;
+    /* this means that the div will grow in same proportion as the window-size */
+}
+
+
