--- a/Flexbox Exercise/css/style.css
+++ b/Flexbox Exercise/css/style.css
@@ -24,6 +24,8 @@ h1{
     padding-left: 20px;
 } 
 
+/*NAVIGATIE*/
+
 nav{
     font-family: Helvetica, sans-serif;
     text-transform: uppercase;
@@ -50,5 +52,22 @@ nav li {
     flex-grow: 1;
     /* this means that the div will grow in same proportion as the window-size */
 }
+
+/*ALBUMS*/
+
+
+section ul{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+
+section li{
+    color: white;
+    text-align: center;
+    list-style: none;
+}
+
 
 
