--- a/Flexbox Exercise/css/style.css
+++ b/Flexbox Exercise/css/style.css
@@ -72,6 +72,22 @@ section li{
 
 @media screen and (min-width: 640px){
     
+    header{
+        display: flex;
+    }
+    
+    nav
+    {
+        flex-grow: 1;
+        
+    }
+    
+    nav ul{
+        flex-direction: row;
+        align-items: center;
+        height: 70px;
+        align-content: space-around;
+    }
     
     section ul{
         flex-direction: row;
