link menu met logo mergen samen op 1 lijn wanneer er plaats voor is een nummer te geven via order

--- a/Week 2/imdstagram/css/style.css
+++ b/Week 2/imdstagram/css/style.css
@@ -43,4 +43,26 @@ section div{
 	background-size: cover;
 }
 
-
+@media(min-width: 860px ) {
+ 	nav ul{
+        align-items: center;
+    }
+    
+    .typography{
+        order: 1
+    }
+    .ui{
+        order: 2
+    }
+    .logo{
+        width: 170px;
+        order: 3
+    }
+    .branding{
+        order: 4
+    }
+    
+    .graffiti{
+        order: 5;
+    }
+}
